--- a/index.html
+++ b/index.html
@@ -602,6 +602,11 @@
           background: linear-gradient(135deg, #9e9e9e, #616161);
           color: #fff;
       }
+
+      .buttons.status-buttons a:not(.active):not(.nowy) {
+          opacity: .65;
+          filter: grayscale(25%);
+      }
    </style>
 </head>
 <body>
