--- a/index.html
+++ b/index.html
@@ -728,7 +728,7 @@
                           </div>
                           <div style="text-align:right">
                               <span class="status-badge ${statusClass(lead.statusKey)}">${lead.status}</span>
-                              <div class="muted" style="margin-top:5px">Aktualizacja:<br>${formatDate(lead.lastUpdate)}</div>
+                              <div class="muted" style="margin-top:5px">Aktualizacja:<br>${formatDate(lead.updated)}</div>
                           </div>
                       </div>
                   </div>
