--- a/index.html
+++ b/index.html
@@ -64,8 +64,8 @@
          transition: opacity 0.2s; 
          border: none; 
          font-size: 15px;
-         min-height: 44px;
-         min-width: 120px;
+         min-height: 22px;
+         min-width: 60px;
          display: flex;
          align-items: center;
          justify-content: center;
@@ -147,7 +147,7 @@
          white-space: nowrap;
       }
       .btn-apply { background: #2563eb !important; color: white !important; border: none; }
-      .multiselect { position: relative; flex: 1; min-width: 150px; }
+      .multiselect { position: relative; min-width: 150px; }
       .multiselect-btn { 
          padding: 12px; 
          border: 1px solid #ddd; 
