--- a/index.html
+++ b/index.html
@@ -901,7 +901,7 @@
                      <p><strong>📞 Nr. Tel:</strong> ${formatPhone(r.phone)}</p>
                      <p><strong>✉️ Mail:</strong> ${escapeHtml(r.email)}</p>
                      <p><strong>⏱️ Czas kontaktu:</strong> ${calculateWaitTimes(r.created, r.updated, r.waitUntil, r.status)}</p>
-                     <p><strong>📢 Kampania:</strong> ${escapeHtml(lead.campaign)}</p>
+                     <p><strong>📢 Kampania:</strong> ${escapeHtml(r.campaign)}</p>
                  </div>
                  <div class="lead-card-actions">
                      <button class="btn-tool" onclick="openPreview('${escapeHtml(r.id)}')" style="width: 100%;">Szczegóły</button>
