--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
       <meta charset="UTF-8">
       <meta http-equiv="Content-Security-Policy" 
       content="default-src 'self'; 
-               script-src 'self' 'unsafe-inline' https://script.google.com https://cdnjs.cloudflare.com; 
+               script-src 'self' 'unsafe-inline' https://script.google.com https://script.googleusercontent.com https://cdnjs.cloudflare.com; 
                style-src 'self' 'unsafe-inline'; 
-               connect-src https://script.google.com;">
+               connect-src https://script.google.com https://script.googleusercontent.com;">
       <title>AdHorizon - System Obsługi Leadów</title>
       <style>
          * { box-sizing: border-box; }
